# eaton-interview-hw

./: .clang-format  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
cmake/: CompileOptions.cmake  Dependencies.cmake
doc/: build-and-run.md  solution-description.md
dockerfile/: environment.Dockerfile
include/: device_base.h  device_connection.h  device_messages_storage.h  devices_monitor.h  monitor.h
include/common/: asynchronous.h  config.h  handler_holder.h  safe_async.h  types.h
include/device_control_messages/: device_message_type.h  error.h  header.h  measurement.h  message_json_coverter.h  message_types.h  messages.h
include/device_messages/: header.h  measurement.h  message_types.h
include/devices/: device_base.h  file_reading_device.h
include/net/: device_tcp_client.h  device_tcp_connection.h  device_tcp_server.h  tcp_client.h  types.h
src/: CMakeLists.txt  device_messages_storage.cpp  devices_monitor.cpp
src/device_control_messages/: error.cpp  header.cpp  measurement.cpp
src/device_messages/: measurement.cpp
src/devices/: file_reading_device.cpp
tests/: CMakeLists.txt  devices.cpp  messages_net_transfer.cpp
tools/: CMakeLists.txt
tools/device_monitor_tool/: CMakeLists.txt  main.cpp
tools/file_reading_device_tool/: CMakeLists.txt  main.cpp
